web-app-deplyment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: ns-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: frontend
        image: ghcr.io/tech-samples/react-fraud-chatbot-ui:latest
        ports:
          - containerPort: 3000
      - name: backend
        image: ghcr.io/tech-samples/fraud-chatbot-api:latest
        ports:
          - containerPort: 5000
