backend-service.yaml
# backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-detection
  namespace: ns-app
  labels:
    app: fraud-detection
    tier: backend
spec:
  selector:
    app: fraud-detection
  ports:
  - name: http
    protocol: TCP
    port: 4000
    targetPort: 4000
