service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: ns-app
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 3000
  type: ClusterIP
