ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app2-ingress
  namespace: ns-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    #cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Remove if not using TLS
spec:
  # tls is not required if you are not using HTTPS
  # tls:
  # - hosts:
  #   - ce-grp-3a-my-app2.sctp-sandbox.com
  #   secretName: my-app-tls-secret
  ingressClassName: nginx  # Explicitly set
  rules:
  - host: ce-grp-3a-my-app2.sctp-sandbox.com
    http:
      paths:
      - path: /
        pathType: Prefix  # this has 503 error. Prefix is used ot matches all subpaths (e.g., /, /home, /contact)
        #pathType: Exact   # this has 404 error. Exact is used to only matches "/api" (not /api/v1, /api/test, etc.)
        backend:
          service:
            name: frontend-service
            port:
              number: 7766 #80 has 504 time out error.
      - path: /api
        pathType: Exact   # Only matches "/api" (not /api/v1, /api/test, etc.)
        #pathType: Prefix   # work. Matches "/api" and all its subpaths (e.g., /api/v1, /api/test)
        backend:
          service:
            name: backend-service
            port:
              number: 7777
      - path: /backend
        pathType: Exact   # Only matches "/backend"
        backend:
          service:
            name: backend-service
            port:
              number: 7777
